--- a/indelx.html
+++ b/indelx.html
@@ -17,49 +17,51 @@
             </div>
         </header>
 
-        <main class="main-content-wrapper">
-            <div class="main-content">
-                <div class="show-menu">
-                    <i onclick="showMenu(this)" class="fas fa-cog dot-menu-btn" id="active-menu"></i>
-                    <ul class="dot-menu active-menu" id="active-menu">
-                        <li class="menu-item" id="active-menu">
-                            <span class="clock-format-text active-menu" id="active-menu">Switch format</span>
-                            <div class="format-switch-btn active-menu" id="active-menu" data-format="12"></div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="max-width">
-                    <div class="tittle-wrapper">
-                        <div class="tittle">
-                            <div class="project-name">
-                                <span>Javascript project</span>
-                            </div>
-                            <div class="tittle-name">
-                                <h1>DIGITAL COLOCK</h1>
-                                <span>Switching hours format</span>
+        <main>
+            <div class="main-content-wrapper">
+                <section class="main-content">
+                    <div class="show-menu">
+                        <i onclick="showMenu(this)" class="fas fa-cog dot-menu-btn" id="active-menu"></i>
+                        <ul class="dot-menu active-menu" id="active-menu">
+                            <li class="menu-item" id="active-menu">
+                                <span class="clock-format-text active-menu" id="active-menu">Switch format</span>
+                                <div class="format-switch-btn active-menu" id="active-menu" data-format="12"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="digital-clock">
+                        <div class="tittle-wrapper">
+                            <div class="tittle">
+                                <div class="project-name">
+                                    <span>Javascript project</span>
+                                </div>
+                                <div class="tittle-name">
+                                    <h1>DIGITAL COLOCK</h1>
+                                    <span>Switching hours format</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="digital-clock-wrapper">
-                        <div class="digital-clock">
-                            <div class="calender">
-                                <span class="month-name">Mar</span>,
-                                <span class="day-name">Day</span>
-                                <span class="day-number">0</span>
-                                <!-- <span class="year">0000</span> -->
-                            </div>
-                            <div class="time">
-                                <span class="hours">00</span>
-                                <span class="dots">:</span>
-                                <span class="minutes">00</span>
-                                <div class="right-side">
-                                    <span class="period">AM/PM</span>
-                                    <span class="seconds">00</span>
+                        <div class="clock-wrapper">
+                            <div class="clock">
+                                <div class="calender">
+                                    <span class="month-name">Mar</span>,
+                                    <span class="day-name">Day</span>
+                                    <span class="day-number">0</span>
+                                    <!-- <span class="year">0000</span> -->
+                                </div>
+                                <div class="time">
+                                    <span class="hours">00</span>
+                                    <span class="dots">:</span>
+                                    <span class="minutes">00</span>
+                                    <div class="right-side">
+                                        <span class="period">AM/PM</span>
+                                        <span class="seconds">00</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </main>
 
