--- a/digital_clock.html
+++ b/digital_clock.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css" />
+        <title>Digital clock switch hours format with Javascript</title>
+        <link rel="stylesheet" href="digital_clock.css" />
         <script src="https://kit.fontawesome.com/2310046e07.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -65,6 +65,6 @@
             </div>
         </main>
 
-        <script src="script.js"></script>
+        <script src="digital_clock.js"></script>
     </body>
 </html>
